--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -13,6 +13,16 @@ msgstr ""
 msgid "Command"
 msgstr ""
 
+#: lazarusidestrconsts.cocoamfstbijumpback
+msgctxt "lazarusidestrconsts.cocoamfstbijumpback"
+msgid "Jump Back"
+msgstr ""
+
+#: lazarusidestrconsts.cocoamfstbijumpforward
+msgctxt "lazarusidestrconsts.cocoamfstbijumpforward"
+msgid "Jump Forward"
+msgstr ""
+
 #: lazarusidestrconsts.cocoamfstbisearch
 msgid "Search Instantly"
 msgstr ""
@@ -13341,12 +13351,14 @@ msgstr "Inspecciona ..."
 #: lazarusidestrconsts.lismenujumpback
 #, fuzzy
 #| msgid "Jump back"
+msgctxt "lazarusidestrconsts.lismenujumpback"
 msgid "Jump Back"
 msgstr "Salta enrera"
 
 #: lazarusidestrconsts.lismenujumpforward
 #, fuzzy
 #| msgid "Jump forward"
+msgctxt "lazarusidestrconsts.lismenujumpforward"
 msgid "Jump Forward"
 msgstr "Salta endavant"
 
