--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -16,6 +16,16 @@ msgstr ""
 msgid "Command"
 msgstr ""
 
+#: lazarusidestrconsts.cocoamfstbijumpback
+msgctxt "lazarusidestrconsts.cocoamfstbijumpback"
+msgid "Jump Back"
+msgstr ""
+
+#: lazarusidestrconsts.cocoamfstbijumpforward
+msgctxt "lazarusidestrconsts.cocoamfstbijumpforward"
+msgid "Jump Forward"
+msgstr ""
+
 #: lazarusidestrconsts.cocoamfstbisearch
 msgid "Search Instantly"
 msgstr ""
@@ -13774,12 +13784,14 @@ msgstr "פקח ..."
 #: lazarusidestrconsts.lismenujumpback
 #, fuzzy
 #| msgid "Jump back"
+msgctxt "lazarusidestrconsts.lismenujumpback"
 msgid "Jump Back"
 msgstr "קפוץ אחורה"
 
 #: lazarusidestrconsts.lismenujumpforward
 #, fuzzy
 #| msgid "Jump forward"
+msgctxt "lazarusidestrconsts.lismenujumpforward"
 msgid "Jump Forward"
 msgstr "קפוץ קדימה"
 
