--- a/languages/lazaruside.id.po
+++ b/languages/lazaruside.id.po
@@ -13,6 +13,16 @@ msgstr ""
 msgid "Command"
 msgstr ""
 
+#: lazarusidestrconsts.cocoamfstbijumpback
+msgctxt "lazarusidestrconsts.cocoamfstbijumpback"
+msgid "Jump Back"
+msgstr ""
+
+#: lazarusidestrconsts.cocoamfstbijumpforward
+msgctxt "lazarusidestrconsts.cocoamfstbijumpforward"
+msgid "Jump Forward"
+msgstr ""
+
 #: lazarusidestrconsts.cocoamfstbisearch
 msgid "Search Instantly"
 msgstr ""
@@ -13514,12 +13524,14 @@ msgstr "Inspeksi ..."
 #: lazarusidestrconsts.lismenujumpback
 #, fuzzy
 #| msgid "Jump back"
+msgctxt "lazarusidestrconsts.lismenujumpback"
 msgid "Jump Back"
 msgstr "Lompat kembali"
 
 #: lazarusidestrconsts.lismenujumpforward
 #, fuzzy
 #| msgid "Jump forward"
+msgctxt "lazarusidestrconsts.lismenujumpforward"
 msgid "Jump Forward"
 msgstr "Lompat maju"
 
