--- a/tools/icons_to_html/languages/icontable.ru.po
+++ b/tools/icons_to_html/languages/icontable.ru.po
@@ -155,11 +155,13 @@ msgctxt "tmainform.menuhtmlpageenglish.caption"
 msgid "HTML page in English"
 msgstr "Страница HTML на английском языке"
 
-#: tmainform.sbtnlastdirs.hint
+#: tmainform.tblastdirs.hint
+msgctxt "tmainform.tblastdirs.hint"
 msgid "Last used"
 msgstr "Недавние"
 
-#: tmainform.sbtnmenu.hint
+#: tmainform.tbmenu.hint
+msgctxt "tmainform.tbmenu.hint"
 msgid "Options"
 msgstr "Параметры"
 
