--- a/languages/lazaruside.de.po
+++ b/languages/lazaruside.de.po
@@ -3857,6 +3857,14 @@ msgctxt "lazarusidestrconsts.dlgreset"
 msgid "Reset"
 msgstr ""
 
+#: lazarusidestrconsts.dlgresetactivedesktopbtncaption
+msgid "Restore active"
+msgstr ""
+
+#: lazarusidestrconsts.dlgresetactivedesktopbtnhint
+msgid "Restore window layout of active desktop"
+msgstr ""
+
 #: lazarusidestrconsts.dlgresetall
 msgid "Reset all"
 msgstr ""
@@ -11549,11 +11557,16 @@ msgid "Run program"
 msgstr "Programm starten"
 
 #: lazarusidestrconsts.liskmsaveall
-msgid "SaveAll"
+#, fuzzy
+#| msgid "SaveAll"
+msgctxt "lazarusidestrconsts.liskmsaveall"
+msgid "Save All"
 msgstr "Alles speichern"
 
 #: lazarusidestrconsts.liskmsaveas
-msgid "SaveAs"
+#, fuzzy
+#| msgid "SaveAs"
+msgid "Save As"
 msgstr "Speichern als"
 
 #: lazarusidestrconsts.liskmsaveproject
@@ -13491,6 +13504,15 @@ msgstr "Debugger zurücksetzen"
 msgid "Revert"
 msgstr "Wiederherstellen"
 
+#: lazarusidestrconsts.lismenurevertconfirm
+#, object-pascal-format
+msgid ""
+"Discard all unsaved changes in\n"
+"\"%s\"?\n"
+"\n"
+"This action cannot be undone and will affect all editor tabs with the file."
+msgstr ""
+
 #: lazarusidestrconsts.lismenurun
 msgctxt "lazarusidestrconsts.lismenurun"
 msgid "&Run"
@@ -14732,10 +14754,6 @@ msgstr "Einstellungen"
 #: lazarusidestrconsts.lisoptionvalueignored
 msgid "ignored"
 msgstr "ignoriert"
-
-#: lazarusidestrconsts.lisor
-msgid "or"
-msgstr "oder"
 
 #: lazarusidestrconsts.lisos
 #, object-pascal-format
