--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -3996,6 +3996,14 @@ msgctxt "lazarusidestrconsts.dlgreset"
 msgid "Reset"
 msgstr ""
 
+#: lazarusidestrconsts.dlgresetactivedesktopbtncaption
+msgid "Restore active"
+msgstr ""
+
+#: lazarusidestrconsts.dlgresetactivedesktopbtnhint
+msgid "Restore window layout of active desktop"
+msgstr ""
+
 #: lazarusidestrconsts.dlgresetall
 msgid "Reset all"
 msgstr ""
@@ -11935,11 +11943,16 @@ msgid "Run program"
 msgstr "הרץ תוכנה"
 
 #: lazarusidestrconsts.liskmsaveall
-msgid "SaveAll"
+#, fuzzy
+#| msgid "SaveAll"
+msgctxt "lazarusidestrconsts.liskmsaveall"
+msgid "Save All"
 msgstr "שמור הכל"
 
 #: lazarusidestrconsts.liskmsaveas
-msgid "SaveAs"
+#, fuzzy
+#| msgid "SaveAs"
+msgid "Save As"
 msgstr "שמור כ"
 
 #: lazarusidestrconsts.liskmsaveproject
@@ -14085,6 +14098,15 @@ msgstr "אתחל את מנפה השגיאות"
 msgid "Revert"
 msgstr "שחזר"
 
+#: lazarusidestrconsts.lismenurevertconfirm
+#, object-pascal-format
+msgid ""
+"Discard all unsaved changes in\n"
+"\"%s\"?\n"
+"\n"
+"This action cannot be undone and will affect all editor tabs with the file."
+msgstr ""
+
 #: lazarusidestrconsts.lismenurun
 #, fuzzy
 msgctxt "lazarusidestrconsts.lismenurun"
@@ -15401,10 +15423,6 @@ msgstr "אפשרויות"
 #: lazarusidestrconsts.lisoptionvalueignored
 msgid "ignored"
 msgstr ""
-
-#: lazarusidestrconsts.lisor
-msgid "or"
-msgstr "או"
 
 #: lazarusidestrconsts.lisos
 #, object-pascal-format
