--- a/languages/lazaruside.lt.po
+++ b/languages/lazaruside.lt.po
@@ -3897,6 +3897,14 @@ msgctxt "lazarusidestrconsts.dlgreset"
 msgid "Reset"
 msgstr "Atstatyti"
 
+#: lazarusidestrconsts.dlgresetactivedesktopbtncaption
+msgid "Restore active"
+msgstr ""
+
+#: lazarusidestrconsts.dlgresetactivedesktopbtnhint
+msgid "Restore window layout of active desktop"
+msgstr ""
+
 #: lazarusidestrconsts.dlgresetall
 msgid "Reset all"
 msgstr ""
@@ -11642,11 +11650,16 @@ msgid "Run program"
 msgstr "Startuoti programą"
 
 #: lazarusidestrconsts.liskmsaveall
-msgid "SaveAll"
+#, fuzzy
+#| msgid "SaveAll"
+msgctxt "lazarusidestrconsts.liskmsaveall"
+msgid "Save All"
 msgstr "Įrašyti visus"
 
 #: lazarusidestrconsts.liskmsaveas
-msgid "SaveAs"
+#, fuzzy
+#| msgid "SaveAs"
+msgid "Save As"
 msgstr "Įrašyti taip"
 
 #: lazarusidestrconsts.liskmsaveproject
@@ -13597,6 +13610,15 @@ msgstr "Atstatyti derintuvę pradžion"
 msgid "Revert"
 msgstr "Atstatyti"
 
+#: lazarusidestrconsts.lismenurevertconfirm
+#, object-pascal-format
+msgid ""
+"Discard all unsaved changes in\n"
+"\"%s\"?\n"
+"\n"
+"This action cannot be undone and will affect all editor tabs with the file."
+msgstr ""
+
 #: lazarusidestrconsts.lismenurun
 msgctxt "lazarusidestrconsts.lismenurun"
 msgid "&Run"
@@ -14876,10 +14898,6 @@ msgstr "Parinktys"
 #: lazarusidestrconsts.lisoptionvalueignored
 msgid "ignored"
 msgstr "ignoruojamas"
-
-#: lazarusidestrconsts.lisor
-msgid "or"
-msgstr "arba"
 
 #: lazarusidestrconsts.lisos
 #, object-pascal-format
