--- a/languages/lazaruside.tr.po
+++ b/languages/lazaruside.tr.po
@@ -3766,6 +3766,14 @@ msgctxt "lazarusidestrconsts.dlgreset"
 msgid "Reset"
 msgstr "Sıfırla"
 
+#: lazarusidestrconsts.dlgresetactivedesktopbtncaption
+msgid "Restore active"
+msgstr ""
+
+#: lazarusidestrconsts.dlgresetactivedesktopbtnhint
+msgid "Restore window layout of active desktop"
+msgstr ""
+
 #: lazarusidestrconsts.dlgresetall
 msgid "Reset all"
 msgstr "Tümünü sıfırla"
@@ -11381,11 +11389,16 @@ msgid "Run program"
 msgstr "Programı çalıştır"
 
 #: lazarusidestrconsts.liskmsaveall
-msgid "SaveAll"
+#, fuzzy
+#| msgid "SaveAll"
+msgctxt "lazarusidestrconsts.liskmsaveall"
+msgid "Save All"
 msgstr "Hepsini kaydet"
 
 #: lazarusidestrconsts.liskmsaveas
-msgid "SaveAs"
+#, fuzzy
+#| msgid "SaveAs"
+msgid "Save As"
 msgstr "Farklı kaydet"
 
 #: lazarusidestrconsts.liskmsaveproject
@@ -13284,6 +13297,15 @@ msgstr "Hata Ayıklayıcıyı Sıfırla"
 msgid "Revert"
 msgstr "Geri Dön"
 
+#: lazarusidestrconsts.lismenurevertconfirm
+#, object-pascal-format
+msgid ""
+"Discard all unsaved changes in\n"
+"\"%s\"?\n"
+"\n"
+"This action cannot be undone and will affect all editor tabs with the file."
+msgstr ""
+
 #: lazarusidestrconsts.lismenurun
 msgctxt "lazarusidestrconsts.lismenurun"
 msgid "&Run"
@@ -14522,10 +14544,6 @@ msgstr "Seçenekler"
 #: lazarusidestrconsts.lisoptionvalueignored
 msgid "ignored"
 msgstr "yoksay"
-
-#: lazarusidestrconsts.lisor
-msgid "or"
-msgstr "veya"
 
 #: lazarusidestrconsts.lisos
 #, object-pascal-format
@@ -16719,6 +16737,7 @@ msgid "Save"
 msgstr "Kaydet"
 
 #: lazarusidestrconsts.lissaveall
+msgctxt "lazarusidestrconsts.lissaveall"
 msgid "Save All"
 msgstr "Hepsini kaydet"
 
