--- a/languages/lazaruside.cs.po
+++ b/languages/lazaruside.cs.po
@@ -3839,6 +3839,14 @@ msgctxt "lazarusidestrconsts.dlgreset"
 msgid "Reset"
 msgstr "Nulovat"
 
+#: lazarusidestrconsts.dlgresetactivedesktopbtncaption
+msgid "Restore active"
+msgstr ""
+
+#: lazarusidestrconsts.dlgresetactivedesktopbtnhint
+msgid "Restore window layout of active desktop"
+msgstr ""
+
 #: lazarusidestrconsts.dlgresetall
 msgid "Reset all"
 msgstr ""
@@ -11536,11 +11544,16 @@ msgid "Run program"
 msgstr "Spustit program"
 
 #: lazarusidestrconsts.liskmsaveall
-msgid "SaveAll"
+#, fuzzy
+#| msgid "SaveAll"
+msgctxt "lazarusidestrconsts.liskmsaveall"
+msgid "Save All"
 msgstr "UložitVše"
 
 #: lazarusidestrconsts.liskmsaveas
-msgid "SaveAs"
+#, fuzzy
+#| msgid "SaveAs"
+msgid "Save As"
 msgstr "UložitJako"
 
 #: lazarusidestrconsts.liskmsaveproject
@@ -13483,6 +13496,15 @@ msgstr "Resetovat ladící nástroj"
 msgid "Revert"
 msgstr "Navrátit"
 
+#: lazarusidestrconsts.lismenurevertconfirm
+#, object-pascal-format
+msgid ""
+"Discard all unsaved changes in\n"
+"\"%s\"?\n"
+"\n"
+"This action cannot be undone and will affect all editor tabs with the file."
+msgstr ""
+
 #: lazarusidestrconsts.lismenurun
 msgctxt "lazarusidestrconsts.lismenurun"
 msgid "&Run"
@@ -14754,10 +14776,6 @@ msgstr "Volby"
 #: lazarusidestrconsts.lisoptionvalueignored
 msgid "ignored"
 msgstr "ignorováno"
-
-#: lazarusidestrconsts.lisor
-msgid "or"
-msgstr "nebo"
 
 #: lazarusidestrconsts.lisos
 #, object-pascal-format
